--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "canvas": "^2.11.0",
+    "konva": "^8.4.3",
     "next": "13.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-konva": "^18.2.5",
+    "use-image": "^1.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
