--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
     "react-konva": "^18.2.5",
     "use-image": "^1.1.0"
   },
